--- a/css/styles.css
+++ b/css/styles.css
@@ -10,13 +10,18 @@
   --color-text-secondary: #ffffff;
 }
 
-body { font-family: "Poppins", sans-serif; }
+body { 
+  font-family: "Poppins", sans-serif;
+  background-color: #f5f5f5;
+}
 
 /* CARD */
 .card {
   width: 100%;
   max-width: 450px;
   margin-inline: auto;
+  background-color: var(--color-text-secondary);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
 }
 
 .card__header {
@@ -94,7 +99,7 @@ body { font-family: "Poppins", sans-serif; }
   &:hover,
   &:focus {
     color: var(--color-background-primary);
-    background-color: #ffffff;
+    background-color: var(--color-text-secondary);
     border-color: var(--color-background-primary);
   }
 
@@ -118,7 +123,7 @@ body { font-family: "Poppins", sans-serif; }
   font-size: .9rem;
   font-weight: 600;
   color: var(--color-background-primary);
-  background-color: #ffffff;
+  background-color: transparent;
   border: 1px solid var(--color-background-primary);
   border-radius: .8rem;
   outline: none;
